secondary/src/main/mt22/parser/.antlr/MT22Parser.py
# Generated from /home/ntr18/Documents/secondary/src/main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'auto'", "'break'", "'boolean'", "'do'", 
                     "'else'", "'false'", "'float'", "'for'", "'function'", 
                     "'if'", "'integer'", "'return'", "'string'", "'true'", 
                     "'void'", "'while'", "'out'", "'continue'", "'of'", 
                     "'inherit'", "'array'", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'!'", "'&&'", "'||'", "'=='", "'!='", "'<'", 
                     "'<='", "'>'", "'>='", "'::'", "'('", "')'", "'['", 
                     "']'", "','", "':'", "';'", "'{'", "'}'", "'='", "'.'" ]

    symbolicNames = [ "<INVALID>", "BooleanLiteral", "IntegerLiteral", "FloatLiteral", 
                      "StringLiteral", "AUTO", "BREAK", "BOOLEAN", "DO", 
                      "ELSE", "FALSE", "FLOAT", "FOR", "FUNCTION", "IF", 
                      "INTEGER", "RETURN", "STRING", "TRUE", "VOID", "WHILE", 
                      "OUT", "CONTINUE", "OF", "INHERIT", "ARRAY", "Plus", 
                      "Minus", "Multiple", "Division", "Remain", "Negation", 
                      "And", "Or", "Equal", "NotEqual", "Less", "LessEqual", 
                      "Greater", "GreaterEqual", "CONCATENATE", "LP", "RP", 
                      "LSB", "RSB", "COMMA", "COLON", "SEMICOLON", "LCB", 
                      "RCB", "ASSIGN", "DOT", "Identifier", "WS", "BlockComment", 
                      "LineComment", "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_decls = 1
    RULE_decl = 2
    RULE_funcDecl = 3
    RULE_varDecl = 4
    RULE_formalDecl = 5
    RULE_initializationDecl = 6
    RULE_term = 7
    RULE_varType = 8
    RULE_arrayType = 9
    RULE_dimensions = 10
    RULE_identifierList = 11
    RULE_functionPrototype = 12
    RULE_paramDecl = 13
    RULE_listPara = 14
    RULE_paradeclList = 15
    RULE_argument = 16
    RULE_inherSubpart = 17
    RULE_functionBody = 18
    RULE_dataType = 19
    RULE_atomicType = 20
    RULE_exprList = 21
    RULE_expression = 22
    RULE_relationalExpression = 23
    RULE_relationalOperator = 24
    RULE_logicalExpression = 25
    RULE_logicalOperator = 26
    RULE_additiveExpression = 27
    RULE_additiveOperator = 28
    RULE_multiplicativeExpression = 29
    RULE_multiplicativeOperator = 30
    RULE_negationExpression = 31
    RULE_negationSignExpression = 32
    RULE_primaryExpression = 33
    RULE_arrayElement = 34
    RULE_functionCall = 35
    RULE_constant = 36
    RULE_statement = 37
    RULE_others = 38
    RULE_assignmentStatement = 39
    RULE_lhs = 40
    RULE_selectionStatement = 41
    RULE_matchStatement = 42
    RULE_unmatchStatement = 43
    RULE_iterationStatement = 44
    RULE_forCondition = 45
    RULE_blockStatement = 46
    RULE_content = 47
    RULE_callStatement = 48
    RULE_jumpStatement = 49
    RULE_arrayLiteral = 50

    ruleNames =  [ "program", "decls", "decl", "funcDecl", "varDecl", "formalDecl", 
                   "initializationDecl", "term", "varType", "arrayType", 
                   "dimensions", "identifierList", "functionPrototype", 
                   "paramDecl", "listPara", "paradeclList", "argument", 
                   "inherSubpart", "functionBody", "dataType", "atomicType", 
                   "exprList", "expression", "relationalExpression", "relationalOperator", 
                   "logicalExpression", "logicalOperator", "additiveExpression", 
                   "additiveOperator", "multiplicativeExpression", "multiplicativeOperator", 
                   "negationExpression", "negationSignExpression", "primaryExpression", 
                   "arrayElement", "functionCall", "constant", "statement", 
                   "others", "assignmentStatement", "lhs", "selectionStatement", 
                   "matchStatement", "unmatchStatement", "iterationStatement", 
                   "forCondition", "blockStatement", "content", "callStatement", 
                   "jumpStatement", "arrayLiteral" ]

    EOF = Token.EOF
    BooleanLiteral=1
    IntegerLiteral=2
    FloatLiteral=3
    StringLiteral=4
    AUTO=5
    BREAK=6
    BOOLEAN=7
    DO=8
    ELSE=9
    FALSE=10
    FLOAT=11
    FOR=12
    FUNCTION=13
    IF=14
    INTEGER=15
    RETURN=16
    STRING=17
    TRUE=18
    VOID=19
    WHILE=20
    OUT=21
    CONTINUE=22
    OF=23
    INHERIT=24
    ARRAY=25
    Plus=26
    Minus=27
    Multiple=28
    Division=29
    Remain=30
    Negation=31
    And=32
    Or=33
    Equal=34
    NotEqual=35
    Less=36
    LessEqual=37
    Greater=38
    GreaterEqual=39
    CONCATENATE=40
    LP=41
    RP=42
    LSB=43
    RSB=44
    COMMA=45
    COLON=46
    SEMICOLON=47
    LCB=48
    RCB=49
    ASSIGN=50
    DOT=51
    Identifier=52
    WS=53
    BlockComment=54
    LineComment=55
    ERROR_CHAR=56
    UNCLOSE_STRING=57
    ILLEGAL_ESCAPE=58

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decls(self):
            return self.getTypedRuleContext(MT22Parser.DeclsContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.decls()
            self.state = 103
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22Parser.DeclContext,0)


        def decls(self):
            return self.getTypedRuleContext(MT22Parser.DeclsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decls




    def decls(self):

        localctx = MT22Parser.DeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decls)
        try:
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.decl()
                self.state = 106
                self.decls()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(MT22Parser.VarDeclContext,0)


        def funcDecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncDeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.varDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.funcDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionPrototype(self):
            return self.getTypedRuleContext(MT22Parser.FunctionPrototypeContext,0)


        def functionBody(self):
            return self.getTypedRuleContext(MT22Parser.FunctionBodyContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_funcDecl




    def funcDecl(self):

        localctx = MT22Parser.FuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_funcDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.functionPrototype()
            self.state = 116
            self.functionBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMICOLON(self):
            return self.getToken(MT22Parser.SEMICOLON, 0)

        def formalDecl(self):
            return self.getTypedRuleContext(MT22Parser.FormalDeclContext,0)


        def initializationDecl(self):
            return self.getTypedRuleContext(MT22Parser.InitializationDeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_varDecl




    def varDecl(self):

        localctx = MT22Parser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 118
                self.formalDecl()
                pass

            elif la_ == 2:
                self.state = 119
                self.initializationDecl()
                pass


            self.state = 122
            self.match(MT22Parser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifierList(self):
            return self.getTypedRuleContext(MT22Parser.IdentifierListContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def varType(self):
            return self.getTypedRuleContext(MT22Parser.VarTypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_formalDecl




    def formalDecl(self):

        localctx = MT22Parser.FormalDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_formalDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.identifierList()
            self.state = 125
            self.match(MT22Parser.COLON)
            self.state = 126
            self.varType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitializationDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(MT22Parser.Identifier, 0)

        def term(self):
            return self.getTypedRuleContext(MT22Parser.TermContext,0)


        def expression(self):
            return self.getTypedRuleContext(MT22Parser.ExpressionContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_initializationDecl




    def initializationDecl(self):

        localctx = MT22Parser.InitializationDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_initializationDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(MT22Parser.Identifier)
            self.state = 129
            self.term()
            self.state = 130
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def Identifier(self):
            return self.getToken(MT22Parser.Identifier, 0)

        def term(self):
            return self.getTypedRuleContext(MT22Parser.TermContext,0)


        def expression(self):
            return self.getTypedRuleContext(MT22Parser.ExpressionContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def varType(self):
            return self.getTypedRuleContext(MT22Parser.VarTypeContext,0)


        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_term




    def term(self):

        localctx = MT22Parser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_term)
        try:
            self.state = 142
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                self.match(MT22Parser.COMMA)
                self.state = 133
                self.match(MT22Parser.Identifier)
                self.state = 134
                self.term()
                self.state = 135
                self.expression()
                self.state = 136
                self.match(MT22Parser.COMMA)
                pass
            elif token in [MT22Parser.COLON]:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.match(MT22Parser.COLON)
                self.state = 139
                self.varType()
                self.state = 140
                self.match(MT22Parser.ASSIGN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atomicType(self):
            return self.getTypedRuleContext(MT22Parser.AtomicTypeContext,0)


        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def arrayType(self):
            return self.getTypedRuleContext(MT22Parser.ArrayTypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_varType




    def varType(self):

        localctx = MT22Parser.VarTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_varType)
        try:
            self.state = 147
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 144
                self.atomicType()
                pass
            elif token in [MT22Parser.AUTO]:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self.match(MT22Parser.AUTO)
                pass
            elif token in [MT22Parser.ARRAY]:
                self.enterOuterAlt(localctx, 3)
                self.state = 146
                self.arrayType()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MT22Parser.ARRAY, 0)

        def dimensions(self):
            return self.getTypedRuleContext(MT22Parser.DimensionsContext,0)


        def OF(self):
            return self.getToken(MT22Parser.OF, 0)

        def atomicType(self):
            return self.getTypedRuleContext(MT22Parser.AtomicTypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_arrayType




    def arrayType(self):

        localctx = MT22Parser.ArrayTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_arrayType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(MT22Parser.ARRAY)
            self.state = 150
            self.dimensions()
            self.state = 151
            self.match(MT22Parser.OF)
            self.state = 152
            self.atomicType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSB(self):
            return self.getToken(MT22Parser.LSB, 0)

        def IntegerLiteral(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.IntegerLiteral)
            else:
                return self.getToken(MT22Parser.IntegerLiteral, i)

        def RSB(self):
            return self.getToken(MT22Parser.RSB, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def getRuleIndex(self):
            return MT22Parser.RULE_dimensions




    def dimensions(self):

        localctx = MT22Parser.DimensionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_dimensions)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(MT22Parser.LSB)
            self.state = 155
            self.match(MT22Parser.IntegerLiteral)
            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MT22Parser.COMMA:
                self.state = 156
                self.match(MT22Parser.COMMA)
                self.state = 157
                self.match(MT22Parser.IntegerLiteral)
                self.state = 162
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 163
            self.match(MT22Parser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.Identifier)
            else:
                return self.getToken(MT22Parser.Identifier, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def getRuleIndex(self):
            return MT22Parser.RULE_identifierList




    def identifierList(self):

        localctx = MT22Parser.IdentifierListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_identifierList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.match(MT22Parser.Identifier)
            self.state = 170
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MT22Parser.COMMA:
                self.state = 166
                self.match(MT22Parser.COMMA)
                self.state = 167
                self.match(MT22Parser.Identifier)
                self.state = 172
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionPrototypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(MT22Parser.Identifier, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def FUNCTION(self):
            return self.getToken(MT22Parser.FUNCTION, 0)

        def dataType(self):
            return self.getTypedRuleContext(MT22Parser.DataTypeContext,0)


        def listPara(self):
            return self.getTypedRuleContext(MT22Parser.ListParaContext,0)


        def inherSubpart(self):
            return self.getTypedRuleContext(MT22Parser.InherSubpartContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_functionPrototype




    def functionPrototype(self):

        localctx = MT22Parser.FunctionPrototypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_functionPrototype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.match(MT22Parser.Identifier)
            self.state = 174
            self.match(MT22Parser.COLON)
            self.state = 175
            self.match(MT22Parser.FUNCTION)
            self.state = 176
            self.dataType()
            self.state = 177
            self.listPara()
            self.state = 179
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 178
                self.inherSubpart()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(MT22Parser.Identifier, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def varType(self):
            return self.getTypedRuleContext(MT22Parser.VarTypeContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_paramDecl




    def paramDecl(self):

        localctx = MT22Parser.ParamDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_paramDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 182
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 181
                self.match(MT22Parser.INHERIT)


            self.state = 185
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.OUT:
                self.state = 184
                self.match(MT22Parser.OUT)

